package org.example;

public enum InvoiceItemType {
    CHARGING, TOPUP;
}
