package org.example;

public enum Status {
    FREE, OCCUPIED, OUT_OF_ORDER;


}
