classDiagram
%% ============================================================
%% =============== DOMAIN LAYER (Fachmodell) ==================
%% ============================================================

    class Customer {
        +int customerId
        +String name
        +String email
        +updateAccount(name: String, email: String)
        +topUpBalance(amount: Double): Double
        +withdrawBalance(amount: Double): Double
        +viewBalance(): Double
    }

    class Invoice {
        +int invoiceId
        +int customerId
        +readInvoiceItems(): InvoiceItem[]
    }

    %% means:
    %% Sum of getBalanceAmount() for all InvoiceItems = current balance
    class InvoiceItem {
        <<abstract>>
        +String itemID
        +InvoiceItemType type
        +getBalanceAmount(): Double
    }

    %% is always negative since it reduces the balance
    class ChargingItem {
        +Double duration
        +Double pricePerKWh
        +getBalanceAmount(): Double
    }

    %% amount is negative for withdraw and positive for top-up
    class BalanceItem {
        +Double amount 
        +getBalanceAmount(): Double
    }

    class Location {
        +int locationId
        +String address
        +String description
        +readAllCharger(): Charger[]
    }

    class Charger {
        +int chargerId
        +int locationId
        +ChargerType type
        +Status status
        +Double kwH
        +Double pricePerKWh
    }

    class InvoiceItemType {
        <<enumeration>>
        CHARGING
        TOPUP
    }

    class ChargerType {
        <<enumeration>>
        AC
        DC
    }

    class Status {
        <<enumeration>>
        FREE
        OCCUPIED
        OUT_OF_ORDER
    }

%% ===== Vererbung =====

    InvoiceItem <|-- ChargingItem
    InvoiceItem <|-- BalanceItem

%% ===== Domain-Relationen =====

    Customer "1" --> "0..*" Invoice : has
    Invoice "1" --> "1..*" InvoiceItem : contains
    Location "1" --> "0..*" Charger : provides

%% ============================================================
%% =============== REPOSITORY LAYER (Concrete) =================
%% ============================================================

    class CustomerRepository {
        -storage: Map~int, Customer~
        +save(customer: Customer): Customer
        +findAll(): List~Customer~
        +findById(customerId: int): Customer
        +deleteById(customerId: int)
    }

    class InvoiceRepository {
        -storage: Map~int, Invoice~
        +save(invoice: Invoice): Invoice
        +findById(invoiceId: int): Invoice
        +findByCustomerId(customerId: int): List~Invoice~
        +findAll(): List~Invoice~
    }

    class LocationRepository {
        -storage: Map~int, Location~
        +save(location: Location): Location
        +findAll(): List~Location~
        +findById(locationId: int): Location
        +deleteById(locationId: int)
    }

    class ChargerRepository {
        -storage: Map~int, Charger~
        +save(charger: Charger): Charger
        +findById(chargerId: int): Charger
        +findByLocationId(locationId: int): List~Charger~
        +deleteById(chargerId: int)
    }

%% ============================================================
%% =============== SERVICE LAYER ==============================
%% ============================================================

    class CustomerService {
        -customerRepo: CustomerRepository
        -invoiceRepo: InvoiceRepository
        +createCustomer(name: String, email: String): Customer
        +updateCustomer(customerId: int, name: String, email: String): Customer
        +deleteCustomer(customerId: int): Customer
        +getAllCustomers(): List~Customer~
        +getCustomerById(customerId: int): Customer
        +topUpBalance(customerId: int, amount: Double)
        +withdrawBalance(customerId: int, amount: Double)
    }

    class InvoiceService {
        -invoiceRepo: InvoiceRepository
        -customerRepo: CustomerRepository
        +createInvoice(customerId: int): Invoice
        +getInvoice(invoiceId: int): Invoice
        +getInvoiceForCustomer(customerId: int): Invoice
        +getAllInvoices(): List~Invoice~
        +addChargingItem(invoiceId: int, duration: Double, pricePerKWh: Double): ChargingItem
        +addBalanceItem(invoiceId: int, amount: Double): BalanceItem
        +calculateTotal(invoiceId: int): Double
    }

    class LocationService {
        -locationRepo: LocationRepository
        +createLocation(address: String, description: String): Location
        +updateLocation(locationId: int, address: String, description: String): Location
        +deleteLocation(locationId: int): Location
        +getAllLocations(): List~Location~
        +getStationNetwork(): Map
        +getLocation(locationId: int): Location
    }

    class ChargerService {
        -chargerRepo: ChargerRepository
        -locationRepo: LocationRepository
        +createCharger(locationId: int, type: ChargerType, kwH: Double, pricePerKWh: Double): Charger
        +updateChargerStatus(chargerId: int, status: Status): Charger
        +deleteCharger(chargerId: int): Charger
        +getChargersForLocation(locationId: int): List~Charger~
        +getCharger(chargerId: int): Charger
    }

%% ============================================================
%% =============== APPLICATION CONTEXT =========================
%% ============================================================

%% This class creates one shared instance of each repository
%% and injects these instances into the services.
%% This ensures all services work with the same runtime data.
    class ApplicationContext {
        -customerRepo: CustomerRepository
        -invoiceRepo: InvoiceRepository
        -locationRepo: LocationRepository
        -chargerRepo: ChargerRepository

        -customerService: CustomerService
        -invoiceService: InvoiceService
        -locationService: LocationService
        -chargerService: ChargerService

        +init(): void
        +getCustomerService(): CustomerService
        +getInvoiceService(): InvoiceService
        +getLocationService(): LocationService
        +getChargerService(): ChargerService
    }

%% ===== Wiring: ApplicationContext erzeugt Shared Repo Instanzen =====

    ApplicationContext o-- CustomerRepository : creates 1 shared instance
    ApplicationContext o-- InvoiceRepository  : creates 1 shared instance
    ApplicationContext o-- LocationRepository : creates 1 shared instance
    ApplicationContext o-- ChargerRepository  : creates 1 shared instance

%% ===== Wiring: ApplicationContext injiziert Instanzen in Service-Layer =====

    ApplicationContext o-- CustomerService
    ApplicationContext o-- InvoiceService
    ApplicationContext o-- LocationService
    ApplicationContext o-- ChargerService

%% ===== Services nutzen Repositories =====

    CustomerService ..> CustomerRepository
    CustomerService ..> InvoiceRepository

    InvoiceService ..> InvoiceRepository
    InvoiceService ..> CustomerRepository

    LocationService ..> LocationRepository

    ChargerService ..> ChargerRepository
    ChargerService ..> LocationRepository

%% ============================================================
%% ========================== Main ============================
%% ============================================================

    class ElectricChargingStationApp {
        +main(args: String[])
    }

    ElectricChargingStationApp ..> ApplicationContext : "uses 1 shared context"
